# ladyflavor-nowpo-wiki

./: .gitignore  README.md  db_schema.md  index.html  main.py  pyproject.toml  pyproject.toml.poetry
assets/: index--I5goBPt.js  index--VI1w-yN.css  index-7k_M2osq.js  index-BGoDAVaE.css  index-BHZVaB3N.css  index-BIMxsng7.css  index-BPltCpfm.css  index-C1p2TOcY.js  index-C5go34KB.js  index-C5k9835G.js  index-C7C94nkL.css  index-CLxpK5Hn.css  index-CucMBsgR.js  index-D6-XfpuQ.js  index-D692BXeO.js  index-D8Ga92-2.js  index-DNP2wQiQ.css  index-D_Hh0PxF.js  index-DnVvWd6f.js  index-Dqy4l0gQ.css  index-ZnPmjrDp.js  index-lGc8buYQ.js  index-tQrh5Q_K.js  index-wFleN1ci.css
data/: episodes.jsx  podcast-info.json  podcast-info.xml  spotify_data.json  timecodes.jsx  timecodes.jsx.bak  timecodes.txt  xml2json.py
dev-notes/: devnotes.jsx
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
riddles/: data.txt  parse.py  riddles.jsx
src/: analyze-episode.ipynb
tokenized_tw_transcripts/: EP1 當Youtuber幹嘛唸工業設計？.txt  EP100 本集沒有主題.txt  EP103 今天出太陽我就轉行當巫師！.txt  EP106 啊啊啊誰偷吃了我的泡麵 !!!!!.txt  EP107 體育課好可怕請不要現在認出我.txt  EP110 我不是脆脆.txt  EP113 輕鬆獲得第二胎.txt  EP115 鍵盤葬送者與吱吱叫冷氣與猴子與螃蟹.txt  EP116 請不要在早上煮早餐.txt  EP118 遺棄夫君與我爸的錢與警局的花生.txt  EP119 黑暗混沌無序惡魔沼澤化妝桌.txt  EP120 驚悚海螺與戰鬥機阿婆與內傷阿伯.txt  EP121 含有海膽刺五加與蝦竿戰士與零下火鍋.txt  EP133 沒有人在天天洗澡的啦～.txt  EP136 戴隱形眼鏡必有妖！.txt  EP137 史上最廢悲劇 ( ´•̥̥̥ω•̥̥̥` ).txt  EP138 黑暗國小比賽.txt  EP14 無菌的爺爺與超廢減肥史.txt  EP141 阿不然改天再生 ？？.txt  EP145 我的村民與冒險女兒與月中陷阱.txt  EP146 過年不要去IKEA.txt  EP152 🙏🫧💩❤️.txt  EP153 你這個半途而廢的牙齒廢棄物想喝奶！.txt  (+65 more)
(+1506 files in other folders)
