[tool.poetry]
name = "podcast-analysis"
version = "0.1.0"
description = ""
authors = ["ice1187 <icing1187@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.32.3"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
certifi = "^2024.7.4"
jupyterlab = "^4.2.4"
jupyterlab-vim = "^4.1.3"
flask = "^3.0.3"
pymongo = {extras = ["srv"], version = "^4.8.0"}
flask-pymongo = "^2.3.0"
tensorflow = "2.15"
gdown = "^5.2.0"
ckiptagger = "^0.2.1"
opencc = "^1.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
